k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ant-demo
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: ant-demo
    app.kubernetes.io/managed-by: istio
