k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ant-demo-gateway
  namespace: ant-demo
  labels:
    app.kubernetes.io/name: ant-demo-gateway
    app.kubernetes.io/part-of: ant-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ant-demo-tls
    hosts:
    - "*"
